# codyco-superbuild

./: .appveyor.yml  .gitignore  .startup_codyco_superbuild.m.in  .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  appveyor.yml
.ci/: brew_install_or_upgrade_formula.sh  travis-build.sh  travis-deps.sh
cmake/: BoostDependencies.cmake  BuildBoost.cmake  BuildCoDyCo.cmake  BuildEigen3.cmake  BuildGazeboYARPPlugins.cmake  BuildICUB.cmake  BuildInSituFTCalibration.cmake  BuildModuleBasicExample.cmake  BuildRTF.cmake  BuildTinyXML.cmake  BuildWBIToolbox.cmake  BuildWBIToolboxControllers.cmake  BuildWBToolbox.cmake  BuildYARP.cmake  Buildcodyco-commons.cmake  Buildcodyco-isir.cmake  Buildcodyco-modules.cmake  BuildcodycoCommons.cmake  BuildcomStepper.cmake  Buildconsole_bridge.cmake  BuildiDynTree.cmake  Buildicub-gazebo-wholebody.cmake  Buildicub-gazebo.cmake  Buildicub-model-generator.cmake  Buildicub-models.cmake  Buildicub-tests.cmake  Buildkdl_codyco.cmake  Buildkdl_format_io.cmake  BuildmexWholeBodyModel.cmake  BuildmodHelp.cmake  BuildmotorFrictionIdentificationLib.cmake  Buildocra-wbi-plugins.cmake  BuildorocosBFLBerdy.cmake  Buildorocos_kdl.cmake  BuildparamHelp.cmake  BuildqpOASES.cmake  BuildsensorsInterfaces.cmake  Buildurdfdom.cmake  Buildurdfdom_headers.cmake  BuildwholeBodyInterface.cmake  (+6 more)
cmake/tools/: generateBoostDependencies.py  module-overview.html
doc/: CMakeLists.txt  Doxyfile.YARP.in  dynamics_notation.md  groups.dox  icub-whole-body-torque-control-faqs.md  main.dox  pointers.md  software_primer.md
scripts/: switch-all.sh
